// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExternalID PUBLIC should match ""PUBLIC " a-zA-Z0-9-()+,./:=?;!*#@$_%" '"'"" 1`] = `
Object {
  "PubidLiteral": "\\" a-zA-Z0-9-()+,./:=?;!*#@$_%\\"",
  "SystemLiteral": "'\\"'",
  "SystemLiteralOnly": undefined,
}
`;

exports[`ExternalID PUBLIC should match ""PUBLIC "" """" 1`] = `
Object {
  "PubidLiteral": "\\"\\"",
  "SystemLiteral": "\\"\\"",
  "SystemLiteralOnly": undefined,
}
`;

exports[`ExternalID PUBLIC should match ""PUBLIC "" ''"" 1`] = `
Object {
  "PubidLiteral": "\\"\\"",
  "SystemLiteral": "''",
  "SystemLiteralOnly": undefined,
}
`;

exports[`ExternalID PUBLIC should match ""PUBLIC "'" "'""" 1`] = `
Object {
  "PubidLiteral": "\\"'\\"",
  "SystemLiteral": "\\"'\\"",
  "SystemLiteralOnly": undefined,
}
`;

exports[`ExternalID PUBLIC should match ""PUBLIC "'" '"'"" 1`] = `
Object {
  "PubidLiteral": "\\"'\\"",
  "SystemLiteral": "'\\"'",
  "SystemLiteralOnly": undefined,
}
`;

exports[`ExternalID PUBLIC should match ""PUBLIC ' a-zA-Z0-9-()+,./:=?;!*#@$_%' '"'"" 1`] = `
Object {
  "PubidLiteral": "' a-zA-Z0-9-()+,./:=?;!*#@$_%'",
  "SystemLiteral": "'\\"'",
  "SystemLiteralOnly": undefined,
}
`;

exports[`ExternalID PUBLIC should match ""PUBLIC '' """" 1`] = `
Object {
  "PubidLiteral": "''",
  "SystemLiteral": "\\"\\"",
  "SystemLiteralOnly": undefined,
}
`;

exports[`ExternalID PUBLIC should match ""PUBLIC '' "'""" 1`] = `
Object {
  "PubidLiteral": "''",
  "SystemLiteral": "\\"'\\"",
  "SystemLiteralOnly": undefined,
}
`;

exports[`ExternalID PUBLIC should match ""PUBLIC '' '"'"" 1`] = `
Object {
  "PubidLiteral": "''",
  "SystemLiteral": "'\\"'",
  "SystemLiteralOnly": undefined,
}
`;

exports[`ExternalID PUBLIC should match ""PUBLIC '' ''"" 1`] = `
Object {
  "PubidLiteral": "''",
  "SystemLiteral": "''",
  "SystemLiteralOnly": undefined,
}
`;

exports[`ExternalID SYSTEM should match ""SYSTEM """" 1`] = `
Object {
  "PubidLiteral": undefined,
  "SystemLiteral": undefined,
  "SystemLiteralOnly": "\\"\\"",
}
`;

exports[`ExternalID SYSTEM should match ""SYSTEM "'""" 1`] = `
Object {
  "PubidLiteral": undefined,
  "SystemLiteral": undefined,
  "SystemLiteralOnly": "\\"'\\"",
}
`;

exports[`ExternalID SYSTEM should match ""SYSTEM '"'"" 1`] = `
Object {
  "PubidLiteral": undefined,
  "SystemLiteral": undefined,
  "SystemLiteralOnly": "'\\"'",
}
`;

exports[`ExternalID SYSTEM should match ""SYSTEM ''"" 1`] = `
Object {
  "PubidLiteral": undefined,
  "SystemLiteral": undefined,
  "SystemLiteralOnly": "''",
}
`;
